# smorinlabs-harness

./: .coderabbit.yaml  PROJECTS.md  README.md  RELEASE-NOTES.md  harness.toml  justfile  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
docs/skills/: ci-audit.md  explain.md  factor-architect.md  factor-dedup.md  factor-scan.md  guided-research.md  html-codesign.md  manual-test-guide.md  pr-merge-flow.md  project-add.md  project-audit.md  project-next.md  project-refine.md  question-walkthrough.md  reader-steps.md  readme-sync.md  repo-finder.md  use-html-theme.md  using-factor-harness.md  using-project-harness.md  version-check.md
docs/superpowers/plans/: 2026-07-20-merge-commit-default.md
docs/superpowers/specs/: 2026-07-17-html-codesign-ergonomics-design.md  2026-07-18-html-codesign-ergonomics-2-design.md  2026-07-20-merge-commit-default-design.md
plugins/: .gitkeep
plugins/explain/: plugin.meta.toml
plugins/explain/.claude-plugin/: plugin.json
plugins/explain/.codex-plugin/: plugin.json
plugins/factor-harness/: plugin.meta.toml
plugins/factor-harness/.claude-plugin/: plugin.json
plugins/factor-harness/.codex-plugin/: plugin.json
plugins/factor-harness/hooks/: session-start
plugins/guided-research/: plugin.meta.toml
plugins/project-harness/: plugin.meta.toml
plugins/question-walkthrough/: plugin.meta.toml
plugins/reader-steps/: plugin.meta.toml
plugins/repo-finder/: CONFORMANCE.md  plugin.meta.toml
plugins/repo-hygiene/: plugin.meta.toml
plugins/use-html-theme/: plugin.meta.toml
(+99 files in other folders)
