[project]
name = "smorinlabs-harness"
version = "0.12.0"
description = "Public cross-platform (Claude Code + Codex) plugin marketplace for smorinlabs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

# This repo is a marketplace, not a Python package — uv only manages the dev
# toolchain (harness-kit) that generates the manifests.
[tool.uv]
package = false

[dependency-groups]
dev = [
    "harness-kit",
]

[tool.uv.sources]
harness-kit = { git = "https://github.com/smorinlabs/harness-kit" }
